syntax = "proto3";
package protos.car_motion_data;

// Main packet
message PacketMotionData { repeated CarMotionData car_motion_data = 1; }

message CarMotionData {
  float worldPositionX = 1;
  float worldPositionY = 2;
  float worldPositionZ = 3;
  // TODO: Check if any of these are actually needed to draw the Car in the map
  float worldVelocityX = 4;
  float worldVelocityY = 5;
  float worldVelocityZ = 6;
  int32 worldForwardDirX = 7;
  int32 worldForwardDirY = 8;
  int32 worldForwardDirZ = 9;
  int32 worldRightDirX = 10;
  int32 worldRightDirY = 11;
  int32 worldRightDirZ = 12;
  float yaw = 13;
}